Update user name from 'You' to 'Kang_Mbyy'

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="user-info">
-                        <span class="user-name">You</span>
+                        <span class="user-name">Kang_Mbyy</span>
                         <span class="user-status">Productive Mode</span>
                     </div>
                 </div>
